--- a/src/app/flex-canvas/flex-canvas.component.html
+++ b/src/app/flex-canvas/flex-canvas.component.html
@@ -116,7 +116,8 @@
                   </button>
                </div>
                <koia-summary-table *ngIf="isSummaryContext(context)" [context]="context"
-                  (onRemove)="removeElement($event)"></koia-summary-table>
+                  (onRemove)="removeElement($event)">
+               </koia-summary-table>
                <koia-chart *ngIf="isChartContext(context)" [context]="context" (onRemove)="removeElement($event)"
                   (onWarning)="notifyWarning($event)">
                </koia-chart>
