--- a/src/app/summary-table/summary-table.component.html
+++ b/src/app/summary-table/summary-table.component.html
@@ -1,13 +1,16 @@
 <mat-progress-bar *ngIf="computing" mode="indeterminate" color="accent"></mat-progress-bar>
-<div #content [id]="gridView ? 'div_table_gridview' : 'div_table'">
+<div id="div_table">
   <table mat-table *ngIf="frameData && rowSpans" [dataSource]="frameData" matSort (matSortChange)="sort($event)"
-         [matSortActive]="currentSort.active" [matSortDirection]="currentSort.direction">
+    [matSortActive]="currentSort.active" [matSortDirection]="currentSort.direction">
 
-    <ng-container [matColumnDef]="column" *ngFor="let column of frameColumns.slice(0, - overalls.length); let iCol = index">
+    <ng-container [matColumnDef]="column"
+      *ngFor="let column of frameColumns.slice(0, - overalls.length); let iCol = index">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</th>
       <td *matCellDef="let entry; let iRow = index" [attr.rowspan]="rowSpans[iCol][iRow].span"
-          [style.display]="rowSpans[iCol][iRow].span === 0 ? 'none'  : ''">{{ formattedValueOf(iCol, entry[column]) }}</td>
-      <td mat-footer-cell *matFooterCellDef>{{iCol === frameColumns.length - overalls.length - 1 ? 'Overall' : '' }}</td>
+        [style.display]="rowSpans[iCol][iRow].span === 0 ? 'none'  : ''">{{ formattedValueOf(iCol, entry[column]) }}
+      </td>
+      <td mat-footer-cell *matFooterCellDef>{{iCol === frameColumns.length - overalls.length - 1 ? 'Overall' : '' }}
+      </td>
     </ng-container>
 
     <ng-container [matColumnDef]="aggregation" *ngFor="let aggregation of context.aggregations; let iCol = index">
@@ -17,7 +20,7 @@
           {{ entry[aggregation] | number }}
         </span>
         <a *ngIf="aggregation === 'Count' && !context.isAnyColumnWithValueGroupingInUse()"
-           (click)="onAggregationCellClick(entry)" matTooltip="Show Data...">
+          (click)="onAggregationCellClick(entry)" matTooltip="Show Data...">
           {{ entry[aggregation] | number }}
         </a>
       </td>
