--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -81,7 +81,7 @@
             <button mat-icon-button matTooltip="Add Relationship Graph" (click)="addGraph()">
                <mat-icon svgIcon="add_graph"></mat-icon>
             </button>
-            <button mat-icon-button matTooltip="Add Summary" (click)="addSummaryTable()">
+            <button mat-icon-button matTooltip="Add Summary" (click)="addSummaryTable(true)">
                <mat-icon svgIcon="add_summary"></mat-icon>
             </button>
          </div>
