--- a/src/app/summary-table/summary-table-side-bar/summary-table-side-bar.component.html
+++ b/src/app/summary-table/summary-table-side-bar/summary-table-side-bar.component.html
@@ -1,5 +1,6 @@
 <div class="div_accordion_options">
-   <mat-slide-toggle class="toggle_multi_expand" [(ngModel)]="multiExpandable" (change)="onMultiExpandableChanged($event.checked)">
+   <mat-slide-toggle class="toggle_multi_expand" [(ngModel)]="multiExpandable"
+      (change)="onMultiExpandableChanged($event.checked)">
       Multi Expansion
    </mat-slide-toggle>
    <span class="span_exp_collapse_all" *ngIf="multiExpandable">
@@ -19,18 +20,19 @@
          <div id="div_sel_data_columns">
             <span *ngFor="let column of dataColumns">
                <div *ngIf="!context.hasValueGrouping(column.name)" class="div_col_value_grouping">
-                  <button class="but_column" mat-raised-button [color]="context.isInUseAsDataColumn(column) ? 'accent' : ''" (click)="onColumnChanged(column)">
+                  <button class="but_column" mat-raised-button
+                     [color]="context.isInUseAsDataColumn(column) ? 'accent' : ''" (click)="onColumnChanged(column)">
                      <mat-icon>{{ iconOf(column.dataType) }}</mat-icon>
                      {{ column.name }}
                   </button>
-                  <mat-icon class="icon_define_value_grouping" *ngIf="isNumericColumn(column)" [matTooltip]="'Define value grouping'"
-                            (click)="addValueGroupingFor(column)">
+                  <mat-icon class="icon_define_value_grouping" *ngIf="isNumericColumn(column)"
+                     [matTooltip]="'Define value grouping'" (click)="addValueGroupingFor(column)">
                      group_work
                   </mat-icon>
                </div>
                <button class="but_column" *ngIf="context.hasValueGrouping(column.name)" mat-raised-button
-                       [color]="context.isInUseAsDataColumn(column) ? 'accent' : ''" matBadge="G" matBadgeSize="small" matBadgeColor="primary"
-                       (click)="onColumnChanged(column)">
+                  [color]="context.isInUseAsDataColumn(column) ? 'accent' : ''" matBadge="G" matBadgeSize="small"
+                  matBadgeColor="primary" (click)="onColumnChanged(column)">
                   <mat-icon>{{ iconOf(column.dataType) }}</mat-icon>
                   {{ column.name }}
                </button>
@@ -41,14 +43,15 @@
             <mat-radio-group [value]="context.isAggregationCountSelected()">
                <mat-radio-button [value]="true" (change)="onAggregationTypeChanged(true)">Count Distinct Values
                </mat-radio-button>
-               <mat-radio-button [value]="false" [disabled]="!isAggregateValuesEnabled()" (change)="onAggregationTypeChanged(false)">Aggregate Values
+               <mat-radio-button [value]="false" [disabled]="!isAggregateValuesEnabled()"
+                  (change)="onAggregationTypeChanged(false)">Aggregate Values
                </mat-radio-button>
             </mat-radio-group>
          </div>
       </koia-expansion-panel>
 
       <koia-expansion-panel *ngFor="let grouping of context.valueGroupings" [title]="grouping.columnName + ' Grouping'"
-                            [deletable]="true" (delete)="removeValueGrouping(grouping)">
+         [deletable]="true" (delete)="removeValueGrouping(grouping)">
          <span class="span_left_to_right">
             <label>max. {{ grouping.minMaxValues.max }}</label>
             <button mat-icon-button matTooltip="Add Value Range" (click)="addGroupingValueRange(grouping)">
@@ -57,12 +60,14 @@
          </span>
          <div class="div_group_values" cdkDropList (cdkDropListDropped)="dropGroupingRange(grouping, $event)">
             <div class="div_group_value" mat-stroked-button *ngFor="let range of grouping.ranges" cdkDrag>
-               <mat-checkbox class="example-margin" [checked]="range.active" (change)="groupingRangeStateChanged(grouping, range, $event.checked)">
+               <mat-checkbox [checked]="range.active"
+                  (change)="groupingRangeStateChanged(grouping, range, $event.checked)">
                </mat-checkbox>
                <label>Up&nbsp;to:</label>
-               <input matInput type="number" [(ngModel)]="range.max" matTooltip="Range max. value, excluding upper value boundary"
-                      (keypress)="isNumberKey($event)">
-               <mat-icon class="icon_remove" *ngIf="grouping.ranges.length > 1" (click)="removeGroupingRange(grouping, range)">
+               <input matInput type="number" [(ngModel)]="range.max"
+                  matTooltip="Range max. value, excluding upper value boundary" (keypress)="isNumberKey($event)">
+               <mat-icon class="icon_remove" *ngIf="grouping.ranges.length > 1"
+                  (click)="removeGroupingRange(grouping, range)">
                   remove_circle_outline
                </mat-icon>
             </div>
@@ -76,17 +81,19 @@
             <mat-icon matTooltip="Drag & Drop available columns to make them selected">help</mat-icon>
          </span>
          <div id="selectedGroupByColumns" #selectedColList="cdkDropList" cdkDropList #selectedColumnsList="cdkDropList"
-              [cdkDropListData]="selectedGroupByColumns" [cdkDropListConnectedTo]="availableColList" class="div_column_list"
-              (cdkDropListDropped)="dropGroupByColumn($event)">
-            <koia-draggable-column *ngFor="let column of selectedGroupByColumns" [context]="context" [column]="column" cssClass="accent">
+            [cdkDropListData]="selectedGroupByColumns" [cdkDropListConnectedTo]="availableColList"
+            class="div_column_list" (cdkDropListDropped)="dropGroupByColumn($event)">
+            <koia-draggable-column *ngFor="let column of selectedGroupByColumns" [context]="context" [column]="column"
+               cssClass="accent">
             </koia-draggable-column>
          </div>
          <br>
          <label>Available Columns</label>
          <div #availableColList="cdkDropList" cdkDropList [cdkDropListData]="availableGroupByColumns"
-              [cdkDropListConnectedTo]="selectedColList" class="div_column_list"
-              (cdkDropListDropped)="dropGroupByColumn($event)">
-            <koia-draggable-column *ngFor="let column of availableGroupByColumns" [context]="context" [column]="column" cssClass="white">
+            [cdkDropListConnectedTo]="selectedColList" class="div_column_list"
+            (cdkDropListDropped)="dropGroupByColumn($event)">
+            <koia-draggable-column *ngFor="let column of availableGroupByColumns" [context]="context" [column]="column"
+               cssClass="white">
             </koia-draggable-column>
          </div>
       </koia-expansion-panel>
@@ -98,22 +105,25 @@
                <mat-icon matTooltip="Drag & Drop available aggregations to make them selected">help</mat-icon>
             </span>
             <div id="selectedAggregations" #selectedAggList="cdkDropList" cdkDropList #selectedColumnsList="cdkDropList"
-                 [cdkDropListData]="selectedAggregations" [cdkDropListConnectedTo]="availableAggList" class="div_column_list"
-                 (cdkDropListDropped)="dropAggregation($event)">
-               <div class="div_column_item accent" mat-stroked-button *ngFor="let aggregation of selectedAggregations" cdkDrag>
+               [cdkDropListData]="selectedAggregations" [cdkDropListConnectedTo]="availableAggList"
+               class="div_column_list" (cdkDropListDropped)="dropAggregation($event)">
+               <div class="div_column_item accent" mat-stroked-button *ngFor="let aggregation of selectedAggregations"
+                  cdkDrag>
                   <span class="accent">{{ aggregation }}</span>
                </div>
             </div>
             <br>
             <label>Available Aggregations</label>
             <div #availableAggList="cdkDropList" cdkDropList [cdkDropListData]="availableAggregations"
-                 [cdkDropListConnectedTo]="selectedAggList" class="div_column_list" (cdkDropListDropped)="dropAggregation($event)">
-               <div class="div_column_item white" mat-stroked-button *ngFor="let aggregation of availableAggregations" cdkDrag>
+               [cdkDropListConnectedTo]="selectedAggList" class="div_column_list"
+               (cdkDropListDropped)="dropAggregation($event)">
+               <div class="div_column_item white" mat-stroked-button *ngFor="let aggregation of availableAggregations"
+                  cdkDrag>
                   {{ aggregation }}
                </div>
             </div>
          </div>
       </koia-expansion-panel>
-      
+
    </mat-accordion>
 </div>
