--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -1,11 +1,11 @@
 <mat-sidenav-container fullscreen>
 
    <mat-sidenav #sidenav mode="push" class="sidenav" *ngIf="elementContexts">
-      <koia-chart-side-bar *ngIf="isChartContext(selectedContext)" [context]="selectedContext" [entries]="entries"
+      <koia-chart-side-bar *ngIf="isChartContext(selectedContext)" [context]="$any(selectedContext)" [entries]="entries"
          [gridColumns]="gridColumns" [elementCount]="elementContexts.length" [elementPosition]="selectedContextPosition"
          (onElementPositionChange)="changeElementPosition($event)">
       </koia-chart-side-bar>
-      <koia-graph-side-bar *ngIf="isGraphContext(selectedContext)" [context]="selectedContext" [entries]="entries"
+      <koia-graph-side-bar *ngIf="isGraphContext(selectedContext)" [context]="$any(selectedContext)" [entries]="entries"
          [gridColumns]="gridColumns" [elementCount]="elementContexts.length" [elementPosition]="selectedContextPosition"
          (onElementPositionChange)="changeElementPosition($event)">
       </koia-graph-side-bar>
@@ -144,7 +144,7 @@
                      </div>
                      <div class="div_title">
                         <textarea matInput class="textarea_title" type="text" [value]="context.getTitle()"
-                           [textareaMaxRows]="2" (keyup)="context.title = $event.target.value"></textarea>
+                           [textareaMaxRows]="2" (keyup)="context.title = $any($event.target).value"></textarea>
                      </div>
                      <button class="but_warning" mat-icon-button *ngIf="context.warning" [matTooltip]="context.warning"
                         color="warn">
@@ -159,13 +159,13 @@
                      </button>
                   </div>
                   <koia-summary-table *ngIf="isSummaryContext(context)" [gridView]="true" [context]="context"
-                     (onRemove)="removeElement($event)">
+                     (onRemove)="removeElement($any($event))">
                   </koia-summary-table>
-                  <koia-chart *ngIf="isChartContext(context)" [gridView]="true" [context]="context"
-                     (onRemove)="removeElement($event)" (onWarning)="notifyWarning($event)">
+                  <koia-chart *ngIf="isChartContext(context)" [gridView]="true" [context]="$any(context)"
+                     (onRemove)="removeElement($any($event))" (onWarning)="notifyWarning($event)">
                   </koia-chart>
                   <div *ngIf="isGraphContext(context)" class="div_graph">
-                     <koia-graph [gridView]="true" [context]="context" (onRemove)="removeElement($event)"
+                     <koia-graph [gridView]="true" [context]="$any(context)" (onRemove)="removeElement($any($event))"
                         (onWarning)="notifyWarning($event)">
                      </koia-graph>
                   </div>
