--- a/src/app/main-toolbar/value-filter/value-filter.component.html
+++ b/src/app/main-toolbar/value-filter/value-filter.component.html
@@ -2,32 +2,31 @@
   <span class="span_menu_trigger" [matMenuTriggerFor]="nameMenu">{{ filter.name }}</span>
   <mat-menu #nameMenu="matMenu">
     <button mat-menu-item *ngFor="let column of columns" [disabled]="column.name === filter.name"
-            (click)="onNameChanged(column)">
+      (click)="onNameChanged(column)">
       <span>&nbsp;{{ column.name }}</span>
     </button>
   </mat-menu>
 
   <span class="span_menu_trigger" [matMenuTriggerFor]="operatorMenu"
-        [matTooltip]="valueFilterCustomizer.tooltipOf(filter)">{{ filter.operator }}</span>
+    [matTooltip]="valueFilterCustomizer.tooltipOf(filter)">{{ filter.operator }}</span>
   <mat-menu #operatorMenu="matMenu">
     <button mat-menu-item *ngFor="let operator of availableOperators()" [disabled]="operator === filter.operator"
-            (click)="filter.operator = operator; onChange.emit()">
+      (click)="filter.operator = operator; onChange.emit()">
       <span>{{ operator }}</span>
     </button>
   </mat-menu>
 
   <div class="div_column_filter_value" *ngIf="!isEqualBoolean() && !filter.operator.endsWith('empty')">
     <input *ngIf="numberDataType" id="column_filter_input" matInput type="search" placeholder="Filter Value"
-           [matTooltip]="valueFilterCustomizer.tooltipOf(filter)"
-           (input)="onValueChanged($event.target.value)" [formControl]="valueControl" formattedFloat (search)="onChange.emit()">
+      [matTooltip]="valueFilterCustomizer.tooltipOf(filter)" (input)="onValueChanged($any($event.target ).value)"
+      [formControl]="valueControl" formattedFloat (search)="onChange.emit()">
     <input *ngIf="!numberDataType" id="column_filter_input" matInput type="search" placeholder="Filter Value"
-           [matTooltip]="valueFilterCustomizer.tooltipOf(filter)"
-           (input)="onValueChanged($event.target.value)" [formControl]="valueControl" (search)="onChange.emit()">
+      [matTooltip]="valueFilterCustomizer.tooltipOf(filter)" (input)="onValueChanged($any($event.target ).value)"
+      [formControl]="valueControl" (search)="onChange.emit()">
     <mat-error *ngIf="valueControl.invalid">{{ valueControl.getError('error') }}</mat-error>
   </div>
 
-  <span class="span_menu_trigger" *ngIf="isEqualBoolean()"
-        [matMenuTriggerFor]="booleanMenu">{{ filter.value }}</span>
+  <span class="span_menu_trigger" *ngIf="isEqualBoolean()" [matMenuTriggerFor]="booleanMenu">{{ filter.value }}</span>
   <mat-menu #booleanMenu="matMenu">
     <button mat-menu-item [disabled]="filter.value === true" (click)="filter.value = true; onChange.emit()">
       <span>true</span>
