--- a/src/app/testing/trial/trial.component.html
+++ b/src/app/testing/trial/trial.component.html
@@ -31,8 +31,8 @@
                 Formatted Integer:
             </td>
             <td>
-                <input matInput type="search" (input)="log('input', $event.target.value)" formattedInteger
-                       (search)="log('search', $event.target.value)">
+                <input matInput type="search" (input)="log('input', $any($event.target ).value)" formattedInteger
+                    (search)="log('search', $any($event.target ).value)">
             </td>
         </tr>
         <tr>
@@ -40,8 +40,8 @@
                 Formatted Float:
             </td>
             <td>
-                <input matInput type="search" (input)="log('input', $event.target.value)" formattedFloat
-                       (search)="log('search', $event.target.value)">
+                <input matInput type="search" (input)="log('input', $any($event.target ).value)" formattedFloat
+                    (search)="log('search', $any($event.target).value)">
             </td>
         </tr>
         <tr>
@@ -49,7 +49,8 @@
                 Limited Text Area:
             </td>
             <td>
-                <textarea matInput type="text" rows="2" [textareaMaxRows]="2" (keyup)="log('keyup', $event.target.value)"></textarea>
+                <textarea matInput type="text" rows="2" [textareaMaxRows]="2"
+                    (keyup)="log('keyup', $any($event.target ).value)"></textarea>
             </td>
         </tr>
     </table>
