Feature #4023: distinct chart scales for data columns

--- a/src/app/chart/chart-side-bar/chart-side-bar.component.html
+++ b/src/app/chart/chart-side-bar/chart-side-bar.component.html
@@ -50,7 +50,7 @@
          </div>
          <mat-slide-toggle
             *ngIf="!context.isCircularChart() && context.dataColumns.length > 1 && !context.splitColumns.length"
-            style="margin-top: 1em;" [(ngModel)]="context.multiValueAxes">Show Distinct Scales
+            style="margin-top: 1em;" [(ngModel)]="context.multiValueAxes">Apply Distinct Scales
          </mat-slide-toggle>
       </koia-expansion-panel>
 
