--- a/src/app/flex-canvas/flex-canvas.component.html
+++ b/src/app/flex-canvas/flex-canvas.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container fullscreen>
 
-   <mat-sidenav mode="push" class="sidenav" *ngIf="elementContexts">
+   <mat-sidenav mode="side" class="sidenav" *ngIf="elementContexts">
       <koia-chart-side-bar *ngIf="isChartContext(selectedContext)" [context]="$any(selectedContext)" [entries]="entries"
          [elementCount]="elementContexts.length" [elementPosition]="selectedContextPosition"
          (onElementPositionChange)="changeElementPosition($event)">
@@ -15,7 +15,7 @@
       </koia-summary-table-side-bar>
    </mat-sidenav>
 
-   <div class="div_wrapper">
+   <mat-sidenav-content>
       <div #header class="div_header">
          <koia-main-toolbar [route]="route" [restoredQuery]="restoredQuery"
             (onFilterChange)="onFilterChanged($event)"></koia-main-toolbar>
@@ -130,5 +130,5 @@
             }
          </div>
       </div>
-   </div>
+   </mat-sidenav-content>
 </mat-sidenav-container>
