--- a/src/app/grid/grid.component.css
+++ b/src/app/grid/grid.component.css
@@ -2,7 +2,8 @@
   display: block;
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 100%;  
+  overflow: hidden;
 }
 
 .div_element_header {
