--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container fullscreen>
 
-   <mat-sidenav #sidenav mode="push" class="sidenav" *ngIf="elementContexts">
+   <mat-sidenav #sidenav mode="side" class="sidenav" *ngIf="elementContexts">
       <koia-chart-side-bar *ngIf="isChartContext(selectedContext)" [context]="$any(selectedContext)" [entries]="entries"
          [gridColumns]="gridColumns" [elementCount]="elementContexts.length" [elementPosition]="selectedContextPosition"
          (onElementPositionChange)="changeElementPosition($event)">
@@ -13,9 +13,9 @@
          [entries]="entries" [gridColumns]="gridColumns" [elementCount]="elementContexts.length"
          [elementPosition]="selectedContextPosition" (onElementPositionChange)="changeElementPosition($event)">
       </koia-summary-table-side-bar>
-   </mat-sidenav>
+   </mat-sidenav>  
 
-   <div class="div_wrapper">
+   <mat-sidenav-content>
       <div #header class="div_header">
          <koia-main-toolbar [route]="route" [restoredQuery]="restoredQuery"
             (onFilterChange)="onFilterChanged($event)"></koia-main-toolbar>
@@ -174,5 +174,5 @@
             }
          </div>
       </div>
-   </div>
+   </mat-sidenav-content>
 </mat-sidenav-container>
