--- a/src/app/pivot-table/pivot-table.component.html
+++ b/src/app/pivot-table/pivot-table.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container fullscreen>
 
-  <mat-sidenav mode="push" class="sidenav">
+  <mat-sidenav mode="side" class="sidenav">
     <koia-pivot-table-side-bar [columns]="columns" [context]="context" [data]="baseDataFrame">
     </koia-pivot-table-side-bar>
   </mat-sidenav>
