upgrade to ng v20

--- a/src/app/shared/component/expansion-panel/expansion-panel.component.html
+++ b/src/app/shared/component/expansion-panel/expansion-panel.component.html
@@ -1,5 +1,4 @@
-<!-- [@.disabled] see https://github.com/angular/components/issues/11765#issuecomment-696601006 -->
-<mat-expansion-panel [@.disabled]="true" [expanded]="expanded">
+<mat-expansion-panel [expanded]="expanded">
     <mat-expansion-panel-header>
         <mat-panel-title>{{ title }}</mat-panel-title>
         <mat-panel-description *ngIf="deletable">
